# naome-memory

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  deny.toml
.cargo/: config.toml  mutants.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml  schema-requirements.txt
.github/ISSUE_TEMPLATE/: bug.yml  config.yml  theory-experiment.yml
.github/workflows/: ci.yml  codeql.yml  deep-proof.yml  dependency-review.yml  mutation.yml  release.yml
crates/naome-memory-cli/: Cargo.toml
crates/naome-memory-cli/src/: main.rs
crates/naome-memory-cli/tests/: json_contract.rs
crates/naome-memory-core/: Cargo.toml
crates/naome-memory-core/src/: canonical.rs  error.rs  fixed.rs  lib.rs  model.rs  policy.rs  receipt.rs  retirement.rs  retrieval.rs  seal.rs  validation.rs
crates/naome-memory-core/tests/: core_contract.rs  core_negative_contract.rs  coverage_validation_contract.rs
crates/naome-memory-lab/: Cargo.toml
crates/naome-memory-lab/src/: crash.rs  error.rs  lib.rs  metrics.rs  proof.rs  synthetic.rs
crates/naome-memory-lab/tests/: campaigns.rs  crash_evidence.rs
crates/naome-memory-lab/tests/support/: reference_receipt.rs  reference_retirement.rs  reference_retrieval.rs  schema.rs
crates/naome-memory-sqlite/: Cargo.toml
crates/naome-memory-sqlite/migrations/: 0001_initial.sql
crates/naome-memory-sqlite/src/: artifact.rs  error.rs  lib.rs  migration.rs  repository.rs
crates/naome-memory-sqlite/tests/: crash_atomicity.rs  integrity_and_scope.rs  retrieval_e2e.rs
datasets/: README.md
docs/: architecture.md  non-claims.md  release.md  storage.md
docs/specs/: memory-atom-v1.md  policy-v1.md  proof-receipt-v1.md  theory-contract-v1.md
evidence/mechanism-2026-07-15/: MANIFEST.md
evidence/mechanism-2026-07-15/deep/: crash-campaign-evidence.json  dataset-manifest-v1.json  decision-ledger.json  deep-receipt.json
evidence/mechanism-2026-07-15/scale/: scale-receipt.json
fuzz/: Cargo.toml  README.md
fuzz/fuzz_targets/: canonical.rs  decoder.rs  receipt_verifier.rs  sqlite_ingest.rs
governance/github/: README.md  allowed_signers  live-verification.md  main-protection.json  project-bootstrap.json  repository-settings.json
paper/: NAOME-MEMORY.md
policies/: poc-v1.toml
schemas/: cli-response-v1.schema.json  dataset-manifest-v1.schema.json  decision-ledger-v1.schema.json  episode-buffer-v1.schema.json  episode-event-v1.schema.json  lab-proof-receipt-v1.schema.json  memory-atom-v1.schema.json  policy-v1.schema.json  proof-receipt-v1.schema.json  public-core-v1.defs.json  receipt-verification-inputs-v1.schema.json  retirement-plan-v1.schema.json  retirement-snapshot-v1.schema.json  retrieval-query-v1.schema.json  retrieval-result-v1.schema.json  scale-receipt-v1.schema.json  seal-episode-request-v1.schema.json  sealed-episode-chain-v1.schema.json  tool-receipt-v1.schema.json  verified-receipt-v1.schema.json
scripts/: create_release_archive.py  create_sbom_bundle.py  validate_json_schemas.py  verify_release_checks.py
xtask/: Cargo.toml
xtask/src/: main.rs  schema_fixtures.rs
