[workspace]
members = [
    "crates/naome-memory-core",
    "crates/naome-memory-sqlite",
    "crates/naome-memory-lab",
    "crates/naome-memory-cli",
    "xtask",
]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.95.0"
license = "Apache-2.0"
repository = "https://github.com/Lamentis-operating-systems/naome-memory"
authors = ["NAOME contributors"]

[workspace.dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.54", features = ["derive"] }
hex = "0.4.3"
rand_chacha = "0.3.1"
rand_core = "0.6.4"
rusqlite = { version = "0.40.1", features = ["bundled", "modern_sqlite"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sha2 = "0.10.9"
tempfile = "3.24.0"
thiserror = "2.0.17"

[workspace.lints.rust]
unsafe_code = "forbid"
missing_debug_implementations = "warn"
rust_2018_idioms = { level = "deny", priority = -1 }

[workspace.lints.clippy]
all = { level = "deny", priority = -1 }
pedantic = { level = "deny", priority = -1 }
alloc_instead_of_core = "warn"
allow_attributes = "warn"
allow_attributes_without_reason = "warn"
arithmetic_side_effects = "warn"
as_conversions = "warn"
dbg_macro = "deny"
decimal_literal_representation = "warn"
empty_drop = "warn"
expect_used = "warn"
float_arithmetic = "deny"
indexing_slicing = "warn"
integer_division = "warn"
integer_division_remainder_used = "warn"
large_include_file = "warn"
map_err_ignore = "warn"
missing_assert_message = "warn"
missing_docs_in_private_items = "allow"
multiple_unsafe_ops_per_block = "deny"
panic = "warn"
print_stderr = "warn"
print_stdout = "warn"
same_name_method = "warn"
shadow_unrelated = "warn"
string_slice = "warn"
todo = "deny"
unimplemented = "deny"
unwrap_used = "deny"
use_debug = "warn"

[profile.release]
codegen-units = 1
lto = "thin"
strip = "symbols"
