[workspace]
members = ["."]
resolver = "3"

[package]
name = "naome-memory-fuzz"
version = "0.0.0"
edition = "2024"
license = "Apache-2.0"
publish = false

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
naome-memory-core = { path = "../crates/naome-memory-core", version = "=0.1.0" }
naome-memory-sqlite = { path = "../crates/naome-memory-sqlite", version = "=0.1.0" }
serde_json = "1.0.149"
tempfile = "3.24.0"

[[bin]]
name = "canonical"
path = "fuzz_targets/canonical.rs"
test = false
doc = false
bench = false

[[bin]]
name = "decoder"
path = "fuzz_targets/decoder.rs"
test = false
doc = false
bench = false

[[bin]]
name = "receipt_verifier"
path = "fuzz_targets/receipt_verifier.rs"
test = false
doc = false
bench = false

[[bin]]
name = "sqlite_ingest"
path = "fuzz_targets/sqlite_ingest.rs"
test = false
doc = false
bench = false
