[package]
name = "naome-memory-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Command-line interface for the NAOME Memory proof of concept"
publish = false

[[bin]]
name = "naome-memory"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
hex.workspace = true
naome-memory-core = { path = "../naome-memory-core" }
naome-memory-lab = { path = "../naome-memory-lab" }
naome-memory-sqlite = { path = "../naome-memory-sqlite" }
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
toml = "0.9.11"

[dev-dependencies]
tempfile.workspace = true

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
all = { level = "deny", priority = -1 }
pedantic = { level = "deny", priority = -1 }
unwrap_used = "deny"
expect_used = "deny"
